# perlin

./: CMakeLists.txt  README.md
scripts/: build.py  clean.py  generate_project.py  run.py  scripts_paths.py
source/: CMakeLists.txt  main.cpp
